--- a/py/core/configs/local_llm_neo4j_kg.toml
+++ b/py/core/configs/local_llm_neo4j_kg.toml
@@ -22,6 +22,7 @@ excluded_parsers = [ "gif", "jpeg", "jpg", "png", "svg", "mp3", "mp4" ]
 
 [kg]
 provider = "neo4j"
+batch_size = 256
 kg_extraction_prompt = "graphrag_triplet_extraction_zero_shot"
 
   [kg.kg_extraction_config]
@@ -37,7 +38,7 @@ kg_extraction_prompt = "graphrag_triplet_extraction_zero_shot"
     max_knowledge_triples = 100
     generation_config_triplet = { model = "ollama/llama3.1" } # and other params, model used for triplet extraction
     generation_config_enrichment = { model = "ollama/llama3.1" } # and other params, model used for node description and graph clustering
-    leiden_params = { max_cluster_size = 1000 } # more params in graspologic/partition/leiden.py
+    leiden_params = { max_cluster_size = 1000 } # more params in neo4j's website
 
   [kg.kg_search_config]
     model = "ollama/llama3.1"
